style.css
body {
  background-color: whitesmoke;
  /* font-family: 'Open Sans', sans-serif; */
}

.container {
  display: flex;
  float: left;
  width: 100%;
  background-color: ghostwhite;
}

.wrapper {
  width: 100%;
  /* height: 600px; */
}

#about {
  margin: 0 auto;
}

.sub-wrapper {
  width: 70% !important;
  padding-left: 15%;
  padding-right: 15%;
}
.our-story {
    display: flex;
    flex-direction: row;
    justify-content: center;
    /* flex-wrap: wrap; */ /* For some reason makes it ALWAYS wrap -> thats why media querie */
    width: 100%;
    max-width: 1000px;
    height: auto;
    padding-top: 50px;
    padding-bottom: 50px;
    margin: 0 auto;
    background-color: white;
  /*   border: 1px solid yellow; */
  }
  @media only screen and (max-width: 950px) {
      .our-story {
          flex-wrap: wrap;
      }
  }

.our-story-image {
  padding-left: 70px;
  padding-right: 20px;
}

.our-story-text {
  padding-left: 84px;
}

.text-ourStory-title {
  color: #413d4b;
  font-family: serif;
  font-size: 22px;
  font-weight: bold;
}

.text-ourStory-dsc {
    margin: 21px 0 0;
    /* width: 100%; */
    opacity: 0.75;
    color: #413d4b;
    font-weight: 300;
    line-height: 22px;
  }

.text-1 {
  opacity: 0.75;
  color: #413d4b;
  font-weight: 300;
  line-height: 22px;
}

#buttonSection3 {
    background-color: transparent;
    text-align: center;
    border-color: #02dbcc;
    color: #02dbcc;
    font-weight: bold;
    padding: 10px 10px;
    margin-top: 3%;
    border-radius: 3px;
    border-style: solid;
}
#buttonSection3:hover {
    background-color: rgba(2, 219, 204, 0.3); /* Same color as #02dbcc just as rbg */
    cursor: pointer;
    transform: scale(1.1);
}
#buttonSection3:active {
    background-color: #02dbcc;
    color: white;
    transform: scale(1.1);
}
/* .btn-learn-more {
  margin: 27px 0 0;
  min-height: 40px;
  padding: 0 13px;
  position: relative;
  width: 120px;
  border: 1px solid #00e0d0;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  color: #00e0d0;
  font-family: sans-serif;
  font-size: 16px;
  line-height: 40px;
  text-align: center;
  font-weight: bold;
} */

#expertise {
  width: 100%;
  padding-bottom: 40px;
  background-color: white;
}


.navbar {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 1em 0 0 0;
    /* background-color: #f3ec78; */

}

.wrapperOne { 
    display: inline-flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    padding: 0% 0%;
    background-image: url(Media/Background/bgk-header.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-color: #30235f;
    height: auto;
    width: 100%;
    color: white;
}

.section2 {
    display: inline-flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    height: auto;
    padding: 10% 0%;
    width: 100%;
    color: white;
}

.navbar a {
    color: #888888;
    padding: .5em;
    text-decoration: none;
    font-size: .75em;
}

.navbar a:hover {
 color: #00e0d0; 
  }

 .navbar a:active {
    color: #00e0d0; 
}

.font {
    font-family: 'Roboto Black', sans-serif; /* This is fallback font for old browsers */
 
 }

 .fontlogo {
    font-family: 'Roboto Light', sans-serif; /* This is fallback font for old browsers */
 }

 .navmenu {
 /*   background-color: greenyellow; */
    margin: 0 auto 0 6em;
 }
 .navlinks {
     margin: 0 0.1em;
     
 }

 .logolockup {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
/*    background-color: blueviolet;  */
 }


 .logoSize {
     font-size: 2.5em;
     margin: 0 0 0 .25em;
 }

 /*   Information about gradients over text:  https://fossheim.io/writing/posts/css-text-gradient/   */
 .logo-gradient {
    background-color: #f3ec78;
    background-image: linear-gradient(90deg, #00e0d0, #4aa3cc);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent; 
    -moz-text-fill-color: transparent;
}


h1 {
    font-weight: bold;
    text-align: center;
    font-size: 2em;
}

p {
    font-size: 1em;
}

hr.blueDivider {
    border-style: solid;
    color: #02dbcc;
    width: 4%;
    height: 0px;
}

#firstParagraph {
    align-self: center;
    max-width: 550px;
    text-align: center;
    align-content: center;
    display: block;
}

#headerButton {
    background-color: transparent;
    text-align: center;
    border-color: #02dbcc;
    color: #02dbcc;
    font-weight: bold;
    padding: 10px 10px;
    border-radius: 3px;
    border-style: solid;
}

#headerButton:hover {
    background-color: rgba(2, 219, 204, 0.3); /* Same color as #02dbcc just as rbg */
    cursor: pointer;
    transform: scale(1.1);
}
#headerButton:active {
    background-color: #02dbcc;
    color: white;
    transform: scale(1.1);
}


/* Section 4 Start */
.section4_ourstory {
    display: inline-flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    padding: 10% 0%;
    background-image: url(Media/Background/bgk-middle.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-color: #30235f;
    height: 20em;
    width: 100%;
    color: white;
    overflow: hidden;
}

/* .videoSize {
    height: auto;
    width: auto;
} */
/* Section 4 Start */



.expertise-item-title {
    padding-bottom: 15px;
    font-size: 14px;
    font-weight: bold;
  }

.expertise-title {
  width: 100%;
  text-align: center;
/*   padding-top: 50px;
  padding-bottom: 50px; */
}
/* .expertise-heading {
    padding-top: 50px;
  padding-bottom: 50px;
} */
.expertise-items-horizontal-seprator {
    width: 100%;
    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
  }
  .expertise-items>div:nth-child(-n + 2) {
  border-right: 1px solid rgba(0, 0, 0, 0.15);
}
.sectionSixContainer {
    display: inline-flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    padding: 0% 0%;
    background-image: url(Media/Background/bgk-header.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-color: #30235f;
    height: auto;
    width: 100%;
    flex-wrap: wrap;
}
.profileContainer {
    display: flex;
    align-items: center;
    /* vertical-align: middle; */
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    /* position: fixed; */
}

.profileClass {
    display: inline-flex;
    align-items: center;
    /* align-self: center; */ /* Not working on mobile for some reason? */
    flex-direction: column;
    /* justify-content: center; */
    border: 2px solid;
    border-color: rgba(255, 255, 255, 0.4);
 /*    margin-left: auto;
    margin-right: auto; */
}
.profilePic {
    width: 300px;
    height: 320px;
    object-fit: cover;
}
.profileText {
    background: transparent;
    color: white;
    overflow-wrap: normal;
    text-align: center;
    align-content: center center;
}

.sixHeadlines {
    width: 100%;
    text-align: center;
    padding-top: 30px;
    padding-bottom: 0px;
}

h3.whiteHeadline {
    color: white;
    padding-top: 3%;
    padding-bottom: 0%;
    line-height: normal;
}

h4.whiteHeadline {
    color: white;
    padding: 0%;
    size: 1em;
    margin-top: 0%;
    font-weight: normal;
    line-height: normal;
}
p.whiteParagraph {
    margin-top: 3%;
    color: white;
}

/* End of Section 6 */

.expertise-title {
    width: 100%;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 50px;
  }

.expertise-title>h3 {
  padding-bottom: 10px;
}

.expertise-items {
  width: 100%;
  display: flex;
  justify-content: center;
}

.expertise-items>div {
  text-align: center;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 35px;
  padding-bottom: 35px;
  }

  .expertise-items>div img {
    padding-bottom: 30px;
  }

  #hiringButton {
    background-color: transparent;
    text-align: center;
    border-color: #02dbcc;
    color: #02dbcc;
    font-weight: bold;
    padding: 10px 10px;
    border-radius: 3px;
    margin-bottom: 5%;
}
#hiringButton:hover {
    background-color: rgba(2, 219, 204, 0.3); /* Same color as #02dbcc just as rbg */
    cursor: pointer;
    transform: scale(1.1);
}
#hiringButton:active {
    background-color: #02dbcc;
    color: white;
    transform: scale(1.1);
}
hr.whiteDivider {
    border-style: solid;
    color: rgba(255, 255, 255, 0.4);
    width: 4%;
    height: 0px;
    margin-bottom: 4%;
}
hr.blackDivider {
    border-style: solid;
    color: rgba(0, 0, 0, 0.4);
    width: 6%;
    height: 0px;
    margin-bottom: 4%;
    margin-top: 2%;
}


  /* Starting here: Section and Section 8 */
.boxSevenEight {
    display: flex;
    align-items: center center;
    flex-direction: row;
    flex-wrap: wrap;
}
.boxSeven {
    display: flex;
    margin-left: auto;
    align-items: flex-start !important;
    flex-direction: column;
    margin-right: 5%;
    margin-top: 3%;
}
h2#headingSeven {
    color: #413d4b;
}

/* Making the Brand Logo Grid */
.boxEight {
    display: grid;
    margin-right: auto;
    margin-top: 3%;
}
h2#headingEight {
    color: #413d4b;
    grid-column: 1 2;
    grid-row: 1; 
}
img.brandLogo {
    width: 150px;
    height: 70px;
    margin: 4%;
}

#logo1 {
    grid-column: 1 2;
    grid-row: 2;
}
#logo2 {
    grid-column: 3 4;
    grid-row: 2;
}
#logo3 {
    grid-column: 1 2;
    grid-row: 3;
}
#logo4 {
    grid-column: 3 4;
    grid-row: 3;
}
#logo5 {
    grid-column: 1 2;
    grid-row: 4;
}
#logo6 {
    grid-column: 3 4;
    grid-row: 4;
}
#logo7 {
    grid-column: 1 2;
    grid-row: 5;
}
#logo8 {
    grid-column: 3 4;
    grid-row: 5;
}
#logo9 {
    grid-column: 1 2;
    grid-row: 6;
}
#logo10 {
    grid-column: 3 4;
    grid-row: 6;
}
@media only screen and (max-width: 825px) {
    .boxSeven {
        margin-left: auto;
        margin-right: auto;
    }
    
    .boxEight {
        margin-left: auto;
        margin-right: auto;
    }
}
/* End of Logo Grid */
/* Input Form */

#inputName {
    width: 100%;
    height: 35px;
    margin: 2%;
    border-style: solid;
    border-width: thin;
    border-color: rgba(0, 0, 0,0.2);
}
#inputEmail {
    width: 100%;
    height: 35px;
    margin: 2%;
    border-style: solid;
    border-width: thin;
    border-color: rgba(0, 0, 0,0.2);
}
#inputSubject {
    width: 100%;
    height: 35px;
    margin: 2%;
    border-style: solid;
    border-width: thin;
    border-color: rgba(0, 0, 0,0.2);
}
#inputMessage {
    height: 200px;
    max-height: 300px;
    min-height: 100px;
    min-width: 100%;
    max-width: 450px;
    margin: 2%;
    border-style: solid;
    border-width: thin;
    border-color: rgba(0, 0, 0,0.2);
}
#inputSubmit {
    background-color: transparent;
    text-align: center;
    border-color: #02dbcc;
    color: #02dbcc;
    font-weight: bold;
    padding: 10px 25px;
    margin: 3%;
    border-radius: 3px;
    border-style: solid;
}
#inputSubmit:hover {
    background-color: rgba(2, 219, 204, 0.3); /* Same color as #02dbcc just as rbg */
    cursor: pointer;
    transform: scale(1.1);
}
#inputSubmit:active {
    background-color: #02dbcc;
    color: white;
    transform: scale(1.1);
}

/* End of Input Form */

